# iot-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  Raport de analiza - model 2021.docx  db.sqlite  docker-compose.yml  main.cpp  script.txt  swagger.json
database/: db.sqlite
documentation/: Raport de analiza - model 2021.docx
src/: DatabaseAccess.cpp  DatabaseAccess.h  SmartFridgeMqttClient.cpp  SmartFridgeMqttClient.h  SmartFridgeService.cpp  SmartFridgeService.h  main.cpp  models.cpp  models.h
